# exsportify

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO  valgrind.supp
img/: logo.xcf
inc/: appkey.h  debug.h  event_loop.h  session.h
inc/spotify/: spotify.h
src/: CMakeLists.txt  appkey.c  debug.h  event_loop.cc  event_loop.h  exsportify.cc  exsportify.h.in  session.cc  session.h  spotify-playlist-exporter.c  spotify-playlist-exporter.h  spotify.cc  spotify.h
src/main/: exporter.cc  exporter.h  spotify-playlist-exporter.c.OLD  spotify-playlist-exporter.cc
src/spotify/: CMakeLists.txt  spotify.cc
